GNOME Bugzilla – Bug 669557
Google backend doesn't properly go !readonly when the network comes online
Last modified: 2012-02-07 11:39:17 UTC
Created attachment 206970 [details] [review] Fix google contacts readonly status changes due to online changes The google contacts backend has another error similar to bug 658911, if it goes offline and then goes online it does request_auth(), but in the case of existing GOA authentication that will never recieve the authentication callback, so we never go !readonly. I'm attaching a patch that fixes this, which also fixes an issue in the fix in bug 658911, where if its offline at startup it should not claim to be !readonly.
Looks good, please commit.
commited