Fix google contacts going online after being offline

The google contacts backend has another error similar to bug 658911,
if it goes offline and then goes online it does request_auth(), but in
the case of existing GOA authentication that will never recieve the
authentication callback, so we never go !readonly.

This patch fixes that, and also fixes an issue in the fix in
bug 658911, where if its offline at startup it should not claim to be
!readonly.

https://bugzilla.gnome.org/show_bug.cgi?id=669557